--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,17 @@ html {
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: "roboto-regular";
+  src: url(assets/fonts/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: "roboto-bold";
+  src: url(assets/fonts/Roboto-Bold.ttf);
+}
 * {
   color: var(--clr-text);
+  font-family: "roboto-regular";
 }
 
 a {
@@ -78,6 +87,162 @@ a {
   text-align: center;
 }
 
+.bodyWrapper .wrapperCollection {
+  margin-left: var(--twentypercent);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.bodyWrapper .wrapperCollection > * {
+  z-index: 2;
+}
+.bodyWrapper .wrapperCollection .background {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+.bodyWrapper .wrapperCollection .background img {
+  width: 100%;
+  height: 100%;
+}
+.bodyWrapper .wrapperCollection .phoneOne {
+  position: absolute;
+  width: 50px;
+  left: 200px;
+  top: 50px;
+  user-select: none;
+}
+.bodyWrapper .wrapperCollection .cardWrapper {
+  width: 75%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+}
+.bodyWrapper .wrapperCollection .cardWrapper .card {
+  flex-basis: 27%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  border: solid 1px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px -3px;
+  user-select: none;
+  transform-origin: center;
+}
+.bodyWrapper .wrapperCollection .cardWrapper .card .flip {
+  animation: flipCard 0.5s;
+}
+.bodyWrapper .wrapperCollection .cardWrapper .card .card-image {
+  width: 100%;
+}
+.bodyWrapper .wrapperCollection .cardWrapper .card .card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0.3rem;
+}
+.bodyWrapper .wrapperCollection .cardWrapper .card .card-content .card-item {
+  font-size: larger;
+}
+.bodyWrapper .wrapperCollection .cardWrapper .card .card-content .card-author {
+  text-transform: capitalize;
+  font-weight: 700;
+  margin-top: 0.5rem;
+  align-self: flex-end;
+}
+.bodyWrapper .wrapperCollection .cardWrapper .card .card-content .card-author .by {
+  text-transform: none;
+  color: rgba(121, 121, 121, 0.445);
+}
+.bodyWrapper .contentWrapper {
+  margin-left: var(--twentypercent);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+}
+.bodyWrapper .contentWrapper > * {
+  z-index: 2;
+}
+.bodyWrapper .contentWrapper .background {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+.bodyWrapper .contentWrapper .background img {
+  width: 100%;
+  height: 100%;
+}
+.bodyWrapper .contentWrapper .phoneOne {
+  position: absolute;
+  width: 50px;
+  left: 200px;
+  top: 50px;
+  user-select: none;
+}
+.bodyWrapper .contentWrapper .cardWrapper {
+  width: 75%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+}
+.bodyWrapper .contentWrapper .cardWrapper .card {
+  flex-basis: 27%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  border: solid 1px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px -3px;
+  user-select: none;
+  transform-origin: center;
+}
+.bodyWrapper .contentWrapper .cardWrapper .card .flip {
+  animation: flipCard 0.5s;
+}
+.bodyWrapper .contentWrapper .cardWrapper .card .card-image {
+  width: 100%;
+}
+.bodyWrapper .contentWrapper .cardWrapper .card .card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0.3rem;
+}
+.bodyWrapper .contentWrapper .cardWrapper .card .card-content .card-item {
+  font-size: larger;
+}
+.bodyWrapper .contentWrapper .cardWrapper .card .card-content .card-author {
+  text-transform: capitalize;
+  font-weight: 700;
+  margin-top: 0.5rem;
+  align-self: flex-end;
+}
+.bodyWrapper .contentWrapper .cardWrapper .card .card-content .card-author .by {
+  text-transform: none;
+  color: rgba(121, 121, 121, 0.445);
+}
+
 .mainCollection {
   display: flex;
   flex-direction: column;
@@ -92,7 +257,7 @@ a {
   flex-wrap: wrap;
   justify-content: center;
   gap: 3rem;
-  padding: 1rem 20rem 2rem;
+  width: 75%;
 }
 .mainCollection .wrapperMain .mainTitle {
   text-align: center;
@@ -100,20 +265,21 @@ a {
 .mainCollection .wrapperMain .mainContent {
   text-align: center;
 }
-.mainCollection .cards {
+.mainCollection .itemElement {
+  flex-basis: 33%;
+}
+.mainCollection .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: solid;
-  width: 150px;
-  height: 150px;
   box-sizing: initial;
 }
-.mainCollection .cards > * {
+.mainCollection .card > * {
   flex-basis: 25%;
 }
-.mainCollection .cards img {
+.mainCollection .card img {
   width: 100px;
 }
 
@@ -138,6 +304,39 @@ a {
   font-weight: 600;
   font-size: larger;
   color: rgb(212, 15, 15);
+}
+
+.formWrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+.formWrapper .inputGroup {
+  flex-basis: 100%;
+  display: flex;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+.formWrapper .inputGroup .inputFifty {
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.formWrapper .inputDescr {
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+.formWrapper .inputYear {
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+.formWrapper .btnWrapper {
+  flex-basis: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
