--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,5 +1,16 @@
+@font-face {
+  font-family: "roboto-regular";
+  src: url(assets/fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-family: "roboto-bold";
+  src: url(assets/fonts/Roboto-Bold.ttf);
+}
+
 * {
   color: var(--clr-text);
+  font-family: "roboto-regular";
 }
 
 a {
