--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -1,4 +1,6 @@
-// ACCUEIL
+/////////////////////////////////////////
+////////////   ACCUEIL   ////////////////
+/////////////////////////////////////////
 
 .wrapper {
   display: flex;
@@ -32,7 +34,197 @@
   }
 }
 
-// COLLECTION
+
+/////////////////////////////////////////
+////////////   COLLECTION   /////////////
+/////////////////////////////////////////
+
+.bodyWrapper {
+
+  .wrapperCollection {
+    margin-left: var(--twentypercent);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    > * {
+      z-index: 2;
+    }
+  
+    .background {
+      position: absolute;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .phoneOne {
+      position: absolute;
+      width: 50px;
+      left: 200px;
+      top: 50px;
+      user-select: none;
+    }
+
+    .cardWrapper {
+      width: 75%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      padding: 3rem;
+
+      .card {
+        flex-basis: 27%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 1rem;
+        border: solid 1px;
+        border-radius: 5px;
+        box-shadow: 0 2px 10px -3px;
+        user-select: none;
+
+        transform-origin: center;
+
+        .flip {
+          animation: flipCard .5s;
+        }
+        
+        .card-image {
+          width: 100%;
+        }
+                
+        .card-content {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          padding: .3rem;
+
+          .card-item {
+            font-size: larger;
+          }
+
+          .card-author {
+            text-transform: capitalize;
+            font-weight: 700;
+            margin-top: .5rem;
+            align-self: flex-end;
+
+            .by {
+              text-transform: none;
+              color: rgba(121, 121, 121, 0.445);
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .contentWrapper {
+    margin-left: var(--twentypercent);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    position: relative;
+    
+    > * {
+      z-index: 2;
+    }
+  
+    .background {
+      position: absolute;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .phoneOne {
+      position: absolute;
+      width: 50px;
+      left: 200px;
+      top: 50px;
+      user-select: none;
+    }
+
+    .cardWrapper {
+      width: 75%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      padding: 3rem;
+
+      .card {
+        flex-basis: 27%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 1rem;
+        border: solid 1px;
+        border-radius: 5px;
+        box-shadow: 0 2px 10px -3px;
+        user-select: none;
+
+        transform-origin: center;
+
+        .flip {
+          animation: flipCard .5s;
+        }
+        
+        .card-image {
+          width: 100%;
+        }
+                
+        .card-content {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          padding: .3rem;
+
+          .card-item {
+            font-size: larger;
+          }
+
+          .card-author {
+            text-transform: capitalize;
+            font-weight: 700;
+            margin-top: .5rem;
+            align-self: flex-end;
+
+            .by {
+              text-transform: none;
+              color: rgba(121, 121, 121, 0.445);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 
 .mainCollection {
   display: flex;
@@ -48,7 +240,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 3rem;
-    padding: 1rem 20rem 2rem;
+    width: 75%;
 
     // Accueil
     .mainTitle {
@@ -60,14 +252,16 @@
     }    
   }
 
-  .cards {
+  .itemElement {
+    flex-basis: 33%;
+  }
+
+  .card {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: solid; 
-    width: 150px;
-    height: 150px;
     box-sizing: initial;
 
     > * {
@@ -80,7 +274,10 @@
   }
 }
 
-// INSCRIPTION
+
+/////////////////////////////////////////
+////////////   INSCRIPTION   ////////////
+/////////////////////////////////////////
 
 .form {
   width: 50%;
@@ -104,4 +301,44 @@
   font-weight: 600;
   font-size: larger;
   color: rgb(212, 15, 15);
+}
+
+
+/////////////////////////////////////////
+////////////   AJOUT   //////////////////
+/////////////////////////////////////////
+
+.formWrapper {
+  display: flex;
+  flex-wrap: wrap;
+
+  .inputGroup {
+    flex-basis: 100%;
+    display: flex;
+    gap: 1rem;
+    margin: 1rem 0;
+
+    .inputFifty {
+      flex-basis: 50%;
+      @include flexCol;
+    }
+  }
+
+  .inputDescr {
+    flex-basis: 100%;
+    @include flexCol;
+    margin: 1rem 0;
+  }
+
+  .inputYear {
+    flex-basis: 100%;
+    @include flexCol;
+    margin: 1rem 0;
+  }
+
+  .btnWrapper {
+    flex-basis: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
