--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,8 @@ a {
 }
 .bodyWrapper .wrapperCollection .cardWrapper .card .card-image {
   width: 100%;
+  height: 200px;
+  padding: 0.5rem;
 }
 .bodyWrapper .wrapperCollection .cardWrapper .card .card-content {
   display: flex;
@@ -213,13 +215,10 @@ a {
   border-radius: 5px;
   box-shadow: 0 2px 10px -3px;
   user-select: none;
-  transform-origin: center;
-}
-.bodyWrapper .contentWrapper .cardWrapper .card .flip {
-  animation: flipCard 0.5s;
 }
 .bodyWrapper .contentWrapper .cardWrapper .card .card-image {
   width: 100%;
+  height: 200px;
 }
 .bodyWrapper .contentWrapper .cardWrapper .card .card-content {
   display: flex;
