--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -102,6 +102,8 @@
         
         .card-image {
           width: 100%;
+          height: 200px;
+          padding: .5rem;
         }
                 
         .card-content {
@@ -185,15 +187,10 @@
         border-radius: 5px;
         box-shadow: 0 2px 10px -3px;
         user-select: none;
-
-        transform-origin: center;
-
-        .flip {
-          animation: flipCard .5s;
-        }
         
         .card-image {
           width: 100%;
+          height: 200px;
         }
                 
         .card-content {
