--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ a {
 
 .sidebar {
   width: var(--twentypercent);
-  height: 100%;
+  height: 94%;
   display: flex;
   flex-direction: column;
   padding: 2rem;
@@ -122,7 +122,7 @@ a {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 3rem;
+  padding: 0 3rem;
 }
 .bodyWrapper .wrapperCollection .cardWrapper .card {
   flex-basis: 27%;
@@ -144,6 +144,7 @@ a {
   width: 100%;
   height: 200px;
   padding: 0.5rem;
+  background-color: rgb(43, 43, 44);
 }
 .bodyWrapper .wrapperCollection .cardWrapper .card .card-content {
   display: flex;
@@ -152,6 +153,7 @@ a {
   align-items: center;
   width: 100%;
   padding: 0.3rem;
+  border-radius: 0 0 5px 5px;
 }
 .bodyWrapper .wrapperCollection .cardWrapper .card .card-content .card-item {
   font-size: larger;
