--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -80,7 +80,7 @@
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      padding: 3rem;
+      padding: 0 3rem;
 
       .card {
         flex-basis: 27%;
@@ -104,6 +104,7 @@
           width: 100%;
           height: 200px;
           padding: .5rem;
+          background-color: rgb(43, 43, 44);
         }
                 
         .card-content {
@@ -113,6 +114,7 @@
           align-items: center;
           width: 100%;
           padding: .3rem;
+          border-radius: 0 0 5px 5px;
 
           .card-item {
             font-size: larger;
